--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-basilica
 certifi
 chardet
 click
@@ -19,6 +18,7 @@ requests
 requests-oauthlib
 scikit-learn
 scipy
+spacy
 six
 sklearn
 SQLAlchemy
